Add About section and improve default index layout

--- a/config.json
+++ b/config.json
@@ -41,7 +41,7 @@
         "Title": "s10",
         "Tagline": "The blog of",
         "Author": "Vlad Gusev",
-        "Description": "Vlad Esten. Vlad Gusev. Essays, reviews, poems, tales, stories.",
+        "Description": "Vlad Esten. Vlad Gusev. Essays, poems, tales, stories.",
         "DateForm": "2006-01-02",
         "mainSections": [
             "post"
