Use module mount instead of symlink
Symlinks are forbidden in CloudFlare Pages

--- a/config.json
+++ b/config.json
@@ -16,6 +16,43 @@
         "static"
     ],
 
+    "module": {
+        "mounts": [
+            {
+                "source": "content",
+                "target": "content"
+            },
+            {
+                "source": "static",
+                "target": "static"
+            },
+            {
+                "source": "layouts",
+                "target": "layouts"
+            },
+            {
+                "source": "data",
+                "target": "data"
+            },
+            {
+                "source": "assets",
+                "target": "assets"
+            },
+            {
+                "source": "i18n",
+                "target": "i18n"
+            },
+            {
+                "source": "archetypes",
+                "target": "archetypes"
+            },
+            {
+                "source": "art",
+                "target": "static/art"
+            }
+        ]
+    },
+
     "markup": {
         "goldmark": {
             "extensions": {
